--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -2,8 +2,8 @@
 
 <p>Someone has requested a link to change your password. You can do this through the link below.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-<%# <p><%= link_to 'Change my password', "https://your-frontend-domain.com/reset-password?reset_password_token=#{@token}" %></p> %>
+<%# <p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %>
+<p><%= link_to 'Change my password', "http://localhost:3000/password_reset?reset_password_token=#{@token}"%></p>
 
 <p>This link will expire in <%= Devise.reset_password_within.to_i / 60 %> minutes.</p>
 
